[gd_scene load_steps=4 format=3 uid="uid://d0jdp5io8ch1f"]

[ext_resource type="Script" uid="uid://056a5613f5wo" path="res://scripts/menu.gd" id="1_lti8b"]
[ext_resource type="Texture2D" uid="uid://dkr4emtfffb8g" path="res://icon.png" id="2_vjb58"]
[ext_resource type="Script" uid="uid://kecslu6hthc6" path="res://scripts/animated_title.gd" id="3_title"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lti8b")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -112.0
offset_top = -9.0
offset_right = 80.0
offset_bottom = 3.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("2_vjb58")
stretch_mode = 6

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="AnimatedTitle" type="VBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
script = ExtResource("3_title")
wave_speed = 3.0
wave_amplitude = 20.0
letter_spacing = 10.0

[node name="HighScoreLabel" type="Label" parent="CenterContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 32
text = "High Score: 0"
horizontal_alignment = 1

[node name="PlayButton" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "PLAY"
